--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -45,6 +45,7 @@ en:
     default_description: "Do you like cats? Check out catteries and kittens with detailed information and the most adorable pictures! Want to plan a visit? Get in touch with the cattery easily."
     show_kitten: "%{cat_breed} kitten (%{cat_gender}) from %{cattery}. This kitten was born on %{cat_birth_date} and can be found in %{cat_location}."
     show_cattery: "%{cattery_name} is a cattery in %{cattery_location} with a passionate focus on raising %{cattery_breeds} cats."
+    show_breed: "Find any %{breed_name} catteries and kittens on Cat Linker, or simply read up on the personality and history of the %{breed_name}."
   select:
     which_breeds_are_you_looking_for: "Which breed(s) are you looking for?"
     which_locations_do_you_prefer: "Which location(s) do you prefer?"
