--- a/config/locales/devise.nl.yml
+++ b/config/locales/devise.nl.yml
@@ -28,7 +28,7 @@ nl:
       already_authenticated: Je bent al ingelogd.
       inactive: Je account is nog niet actief.
       invalid: Je email of wachtwoord is ongeldig.
-      locked: Je account is geblokkeerd.
+      locked: Je account is vergendeld voor 5 minuten, bekijk je email om je account meteen te ontgrendelen.
       last_attempt: Je kan het nog één keer proberen voordat je account wordt geblokkeerd.
       not_found_in_database: Je email of wachtwoord is ongeldig.
       timeout: De sessie is verlopen. Log opnieuw in.
